@@ -45,7 +45,6 @@ bin_PROGRAMS :=
 noinst_PROGRAMS :=
 noinst_HEADERS :=
 lib_LIBRARIES :=
-EXTRA_DIST :=
 IDL_BINDINGS :=
 TEST_PROGS :=
 POFILES :=
@@ -414,6 +413,24 @@ webkitgtk_cleanfiles += \
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = WebKit/gtk/webkit-1.0.pc
 
+# Files that will be distributed
+EXTRA_DIST = \
+	$(srcdir)/gtk-doc.make \
+	WebKit/LICENSE \
+	$(javascriptcore_dist) \
+	$(webcore_dist) \
+	$(srcdir)/autotools/symbols.filter \
+	$(srcdir)/WebKit/gtk/ChangeLog \
+	$(srcdir)/WebKit/gtk/NEWS \
+	$(srcdir)/WebKit/gtk/webkitmarshal.list \
+	$(srcdir)/WebKit/gtk/docs/GNUmakefile.* \
+	$(srcdir)/WebKit/gtk/docs/webkitenvironment.xml \
+	$(srcdir)/WebKit/gtk/docs/webkitgtk-docs.sgml \
+	$(srcdir)/WebKit/gtk/docs/webkitgtk-sections.txt \
+	$(srcdir)/WebKit/gtk/docs/version.xml.in \
+	$(srcdir)/WebKit/gtk/po/* \
+	$(srcdir)/WebKit/gtk/resources/*
+
 if ENABLE_INTROSPECTION
 JSCORE_GIRSOURCES = $(srcdir)/WebKit/gtk/JSCore-1.0.gir # JSCore-1.0.gir is handwritten
 WEBKIT_GIRSOURCES = WebKit-1.0.gir
@@ -510,24 +527,6 @@ DerivedSources/webkitenumtypes.cpp: $(webkitgtk_h_api) GNUmakefile
 		> xgen-gtc \
 	&& cp xgen-gtc $@ \
 	&& rm -f xgen-gtc
-
-# Files that will be distributed
-EXTRA_DIST += \
-	$(srcdir)/gtk-doc.make \
-	WebKit/LICENSE \
-	$(javascriptcore_dist) \
-	$(webcore_dist) \
-	$(srcdir)/autotools/symbols.filter \
-	$(srcdir)/WebKit/gtk/ChangeLog \
-	$(srcdir)/WebKit/gtk/NEWS \
-	$(srcdir)/WebKit/gtk/webkitmarshal.list \
-	$(srcdir)/WebKit/gtk/docs/GNUmakefile.* \
-	$(srcdir)/WebKit/gtk/docs/webkitenvironment.xml \
-	$(srcdir)/WebKit/gtk/docs/webkitgtk-docs.sgml \
-	$(srcdir)/WebKit/gtk/docs/webkitgtk-sections.txt \
-	$(srcdir)/WebKit/gtk/docs/version.xml.in \
-	$(srcdir)/WebKit/gtk/po/* \
-	$(srcdir)/WebKit/gtk/resources/*
 
 # extra resource files
 resourcesdir = ${datadir}/webkit-1.0/resources
