@@ -1,3 +1,9 @@
+2009-10-26  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Unreviewed. Fix make dist regression introduced by r48672.
+
+        * GNUmakefile.am:
+
 2009-10-26  Xan Lopez  <xlopez@igalia.com>
 
         Reviewed by Gustavo Noronha.
